<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<!-- Copyright (C) 2025 Nobleo Autonomous Solutions B.V. -->

<package format="3">
  <name>ros2_fmt_logger</name>
  <version>25.5.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tim.clephas@nobleo.nl">Tim Clephas</maintainer>
  <license>TODO</license>
  <author email="tim.clephas@nobleo.nl">Tim Clephas</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
